--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v4
       - name: welcome message
         run: echo "hello world"
+      - name: generate acii artwork
+        run: cowsay -f dragon "Run for cover i m dragon RERAW" >> dragon.txt
 
       - name: list files
         run: ls
