--- a/.github/workflows/genrateascii.yml
+++ b/.github/workflows/genrateascii.yml
@@ -9,18 +9,10 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
+      - name: list liste
+        run: ls
 
-      - name: install cowsay
-        run: sudo apt update && sudo apt install cowsay -y
-
-      - name: generate ascii artwork
-        run: cowsay -f dragon "Run for cover I'm dragon RERAW" >> dragon.txt
-
-      - name: test file exist
-        run: grep -i "dragon" dragon.txt
-
-      - name: read file
-        run: cat dragon.txt
-
-      - name: list files
+      - name: excute script
+        run: ./ascii-script.sh 
+      - name: list liste
         run: ls
