--- a/.github/workflows/genrateascii.yml
+++ b/.github/workflows/genrateascii.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v4
       - name: list liste
         run: ls
+      - name: make script ex
+        run: chmod +x .github/workflows/ascii-script.sh
 
       - name: excute script
         run: .github/workflows/ascii-script.sh
