--- a/.github/workflows/genrateascii.yml
+++ b/.github/workflows/genrateascii.yml
@@ -7,33 +7,46 @@ jobs:
   buildjob:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v4
-      - name: list liste
-        run: ls
-      - name: installing cowsay 
-        run: sudo apt install cowsay -y 
 
-      - name: excute cowsay 
+      - name: List files
+        run: ls
+
+      - name: Installing cowsay 
+        run: sudo apt install cowsay -y
+
+      - name: Execute cowsay 
         run: cowsay -f dragon "Run for cover I'm dragon RERAW" >> dragon.txt
-      - name: sleep for 30 seconds
+
+      - name: Sleep for 30 seconds
         run: sleep 30
+
   testjob:
+    needs: buildjob
     runs-on: ubuntu-latest
     steps:
-      
-      - name: sleep fo 10 s 
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Sleep for 10 seconds
         run: sleep 10
-      - name: find dragon.txt
+
+      - name: Find dragon.txt
         run: grep -i "dragon" dragon.txt
 
   deployjob:
+    needs: [buildjob, testjob]
     runs-on: ubuntu-latest
     steps:
-     
-      - name: sleep for 10 s 
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Sleep for 10 seconds
         run: sleep 10
-      - name: show the file 
+
+      - name: Show the file
         run: cat dragon.txt
-      - name: list liste
+
+      - name: List files
         run: ls
