--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,22 +4,45 @@ on:
   push:
 
 jobs:
-  first_job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout repo   
-        uses: actions/checkout@v4
-      - name: welcome message
-        run: echo "hello world"
-      - name: generate acii artwork
-        run: cowsay -f dragon "Run for cover i m dragon RERAW" >> dragon.txt
+  zap-scan-job:
+   runs-on: ubuntu-latest
+   permissions:
+    actions: write
+    contents: read
+    issues: write
 
-      - name: list files
-        run: ls
+   steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-      - name: create file
-        run: echo "this my first workflow" > file.txt
+    - name: Run OWASP ZAP Baseline Scan
+      uses: zaproxy/action-baseline@v0.10.0
+      with:
+        target: 'http://www.vulnweb.com/'
+        fail_action: false
+        cmd_options: '-J report_json.json -r report_html.html -w report_md.md'  # Generate JSON, HTML, Markdown reports
 
-      - name: read files
-        run: cat file.txt
+    - name: List Generated Files
+      if: always()
+      run: ls -lah
 
+    - name: Show Report Contents
+      if: always()
+      run: |
+        echo "=== report_html.html ==="
+        cat report_html.html || echo "report_html.html not found"
+        echo "=== report_json.json ==="
+        cat report_json.json || echo "report_json.json not found"
+        echo "=== report_md.md ==="
+        cat report_md.md || echo "report_md.md not found"
+
+    - name: Upload ZAP Report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: zap-report
+        path: |
+          report_html.html
+          report_json.json
+          report_md.md
+        retention-days: 7
