--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -40,7 +40,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: zap-report
+        name: zap
         path: |
           report_html.html
           report_json.json
