--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,48 +1,52 @@
-name: first workflow
+name: OWASP ZAP Scan
 
 on:
   push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+permissions:
+  contents: read
+  issues: write
 
 jobs:
-  zap-scan-job:
-   runs-on: ubuntu-latest
-   permissions:
-    actions: write
-    contents: read
-    issues: write
+  zap-scan:
+    name: Run ZAP Baseline Scan
+    runs-on: ubuntu-latest
 
-   steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Run OWASP ZAP Baseline Scan
-      uses: zaproxy/action-baseline@v0.10.0
-      with:
-        target: 'http://www.vulnweb.com/'
-        fail_action: false
-        cmd_options: '-J report_json.json -r report_html.html -w report_md.md'  # Generate JSON, HTML, Markdown reports
+      - name: Run OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.10.0
+        with:
+          target: 'http://www.vulnweb.com/'
+          fail_action: false
+          cmd_options: '-J zap_report.json -r zap_report.html -w zap_report.md'
 
-    - name: List Generated Files
-      if: always()
-      run: ls -lah
+      - name: List generated files
+        if: always()
+        run: ls -lah
 
-    - name: Show Report Contents
-      if: always()
-      run: |
-        echo "=== report_html.html ==="
-        cat report_html.html || echo "report_html.html not found"
-        echo "=== report_json.json ==="
-        cat report_json.json || echo "report_json.json not found"
-        echo "=== report_md.md ==="
-        cat report_md.md || echo "report_md.md not found"
+      - name: Print reports
+        if: always()
+        run: |
+          echo "==== HTML Report ===="
+          cat zap_report.html || echo "HTML report not found"
+          echo "==== JSON Report ===="
+          cat zap_report.json || echo "JSON report not found"
+          echo "==== Markdown Report ===="
+          cat zap_report.md || echo "Markdown report not found"
 
-    - name: Upload ZAP Report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: zap
-        path: |
-          report_html.html
-          report_json.json
-          report_md.md
-        retention-days: 7
+      - name: Upload ZAP Reports as Artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-scan-reports
+          path: |
+            zap_report.html
+            zap_report.json
+            zap_report.md
+          retention-days: 7
