--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,41 +12,45 @@ permissions:
 
 jobs:
   zap-scan:
-    name: Run ZAP Baseline Scan
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
+      contents: read
+      issues: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Fix permissions on workspace
+        run: sudo chmod -R 777 ${{ github.workspace }}
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://www.vulnweb.com/'
           fail_action: false
-          cmd_options: '-J zap_report.json -r zap_report.html -w zap_report.md'
+          cmd_options: '-r report_html.html -w report_md.md -j report_json.json'
+        working-directory: ${{ github.workspace }}
 
-      - name: List generated files
+      - name: List files after scan
         if: always()
         run: ls -lah
 
-      - name: Print reports
+      - name: Show Report Contents
         if: always()
         run: |
-          echo "==== HTML Report ===="
-          cat zap_report.html || echo "HTML report not found"
-          echo "==== JSON Report ===="
-          cat zap_report.json || echo "JSON report not found"
-          echo "==== Markdown Report ===="
-          cat zap_report.md || echo "Markdown report not found"
+          cat report_html.html || echo "report_html.html not found or empty"
+          cat report_json.json || echo "report_json.json not found or empty"
+          cat report_md.md || echo "report_md.md not found or empty"
 
-      - name: Upload ZAP Reports as Artifacts
+      - name: Upload ZAP Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: zap-scan-reports
           path: |
-            zap_report.html
-            zap_report.json
-            zap_report.md
+            report_html.html
+            report_json.json
+            report_md.md
           retention-days: 7
