--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,3 +1,5 @@
+name: ZAP Baseline Scan
+
 on:
   push:
     branches: [main]
@@ -13,14 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     name: Scan the web application
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
         with:
           ref: main
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.6.1
+
+      - name: ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.8.0
         with:
-          docker_name: 'owasp/zap2docker-stable'
+          docker_name: 'owasp/zap2docker-weekly'
           target: 'http://testphp.vulnweb.com/'
-          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
