--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,18 +11,13 @@ permissions:
   issues: write
 
 jobs:
-  zap_scan:
+   scan:
     runs-on: ubuntu-latest
-    name: Scan the web application
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: zaproxy/action-baseline@v0.7.0
         with:
-          ref: main
-
-      - name: ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.8.0
+          target: 'http://www.vulnweb.com/'
+      - uses: actions/upload-artifact@v3
         with:
-          docker_name: 'owasp/zap2docker-weekly'
-          target: 'http://testphp.vulnweb.com/'
-          cmd_options: '-a'
+          name: zap-results
+          path: zap-report.html
