--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,16 +8,26 @@ on:
 
 permissions:
   contents: read
+  security-events: write  # Needed for GitHub Code Scanning alerts
   issues: write
 
 jobs:
-   scan:
+  scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: zaproxy/action-baseline@v0.7.0
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.7.0
         with:
           target: 'http://www.vulnweb.com/'
-      - uses: actions/upload-artifact@v4
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'  # Updated Docker image location
+          cmd_options: '-r report.html'  # Explicit output filename
+
+      - name: Upload Scan Report
+        uses: actions/upload-artifact@v4
         with:
           name: zap-results
-          path: zap-report.html
+          path: report.html  # Matches the cmd_options output filename
+          retention-days: 3
