--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   contents: read
-  security-events: write  # Needed for GitHub Code Scanning alerts
+  security-events: write
   issues: write
 
 jobs:
@@ -22,12 +22,28 @@ jobs:
         uses: zaproxy/action-baseline@v0.7.0
         with:
           target: 'http://www.vulnweb.com/'
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'  # Updated Docker image location
-          cmd_options: '-r report.html'  # Explicit output filename
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          #token: ${{ secrets.GITHUB_TOKEN }}
+          cmd_options: '-J zap_report.json -w zap_report.md -r zap_report.html'
+          # Using absolute path in container for reports
+          report_path: '/zap/wrk/'
 
-      - name: Upload Scan Report
+      - name: List generated files (debug)
+        run: ls -la /zap/wrk/
+
+      - name: Upload Scan Reports
         uses: actions/upload-artifact@v4
         with:
           name: zap-results
-          path: report.html  # Matches the cmd_options output filename
+          path: |
+            /zap/wrk/zap_report.html
+            /zap/wrk/zap_report.json
+            /zap/wrk/zap_report.md
           retention-days: 3
+
+      - name: Check if reports exist
+        if: always()
+        run: |
+          [ -f /zap/wrk/zap_report.html ] || echo "HTML report not found!"
+          [ -f /zap/wrk/zap_report.json ] || echo "JSON report not found!"
+          [ -f /zap/wrk/zap_report.md ] || echo "Markdown report not found!"
