--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,36 +14,38 @@ permissions:
 jobs:
   scan:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/zaproxy/zaproxy:stable
+      options: --user root
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.7.0
-        with:
-          target: 'http://www.vulnweb.com/'
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          #token: ${{ secrets.GITHUB_TOKEN }}
-          cmd_options: '-J zap_report.json -w zap_report.md -r zap_report.html'
-          # Using absolute path in container for reports
-          report_path: '/zap/wrk/'
+      - name: Create reports directory
+        run: mkdir -p /zap/wrk/
 
-      - name: List generated files (debug)
+      - name: Run ZAP Baseline Scan
+        run: |
+          zap-baseline.py \
+            -t http://www.vulnweb.com/ \
+            -J /zap/wrk/report.json \
+            -w /zap/wrk/report.md \
+            -r /zap/wrk/report.html \
+            --hook=zap_hooks.py \
+            -d
+
+      - name: List generated files
         run: ls -la /zap/wrk/
+
+      - name: Copy reports to workspace
+        run: cp /zap/wrk/report.* .
 
       - name: Upload Scan Reports
         uses: actions/upload-artifact@v4
         with:
           name: zap-results
           path: |
-            /zap/wrk/zap_report.html
-            /zap/wrk/zap_report.json
-            /zap/wrk/zap_report.md
+            report.html
+            report.json
+            report.md
           retention-days: 3
-
-      - name: Check if reports exist
-        if: always()
-        run: |
-          [ -f /zap/wrk/zap_report.html ] || echo "HTML report not found!"
-          [ -f /zap/wrk/zap_report.json ] || echo "JSON report not found!"
-          [ -f /zap/wrk/zap_report.md ] || echo "Markdown report not found!"
