--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v1
+        uses: zaproxy/action-baseline@v0.10.0  # Latest stable version
         with:
           target: 'http://www.vulnweb.com/'
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
@@ -22,6 +22,7 @@ jobs:
           fail_action: false  # Continue even if warnings found
 
       - name: Upload Reports
+        if: success() || failure()  # Upload even if previous steps fail
         uses: actions/upload-artifact@v4
         with:
           name: zap-reports
@@ -31,8 +32,13 @@ jobs:
             report.md
           retention-days: 7
 
-      - name: Display Warnings
+      - name: Display Summary
         if: always()
+        run: |
+          echo "Scan results summary:"
+          [ -f report.md ] && head -n 20 report.md || echo "No report generated"
+          echo ""
+          echo "For full details, download the reports from the Artifacts section"
         run: |
           echo "Scan completed with warnings:"
           cat report.md || echo "No report generated"
