--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,15 +14,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.10.0  # Latest stable version
+        uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://www.vulnweb.com/'
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           cmd_options: '-d -J report.json -w report.md -r report.html'
-          fail_action: false  # Continue even if warnings found
+          fail_action: false
 
       - name: Upload Reports
-        if: success() || failure()  # Upload even if previous steps fail
+        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: zap-reports
@@ -38,7 +38,6 @@ jobs:
           echo "Scan results summary:"
           [ -f report.md ] && head -n 20 report.md || echo "No report generated"
           echo ""
-          echo "For full details, download the reports from the Artifacts section"
-        run: |
           echo "Scan completed with warnings:"
           cat report.md || echo "No report generated"
+          echo "For full details, download the reports from the Artifacts section"
