--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,6 +21,11 @@ jobs:
           cmd_options: '-d -J report.json -w report.md -r report.html'
           fail_action: false
 
+      - name: Check report files
+        run: |
+          ls -lah report.*
+          du -h report.*
+
       - name: Upload Reports
         if: success() || failure()
         uses: actions/upload-artifact@v4
