--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,18 +13,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Fix permissions
+        run: sudo chmod -R 777 ${{ github.workspace }}
+
       - name: Run ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://www.vulnweb.com/'
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          cmd_options: '-d -J report.json -w report.md -r report.html'
+          cmd_options: '-r report.html -w report.md -j report.json'
           fail_action: false
 
-      - name: Check report files
-        run: |
-          ls -lah report.*
-          du -h report.*
+      - name: Find report files recursively
+        run: find . -name "report*"
+
+      - name: List files after scan
+        run: ls -lah
 
       - name: Upload Reports
         if: success() || failure()
@@ -36,13 +39,3 @@ jobs:
             report.json
             report.md
           retention-days: 7
-
-      - name: Display Summary
-        if: always()
-        run: |
-          echo "Scan results summary:"
-          [ -f report.md ] && head -n 20 report.md || echo "No report generated"
-          echo ""
-          echo "Scan completed with warnings:"
-          cat report.md || echo "No report generated"
-          echo "For full details, download the reports from the Artifacts section"
