--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,6 +5,11 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+permissions:
+  contents: read
+  security-events: write
+  issues: write
+  pull-requests: write
 
 jobs:
   zap_scan:
