--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,7 +35,7 @@ jobs:
         run: ls -lah
 
       - name: Upload Reports
-        if: success() || failure()
+        if: always()  # This will run even if previous steps fail
         uses: actions/upload-artifact@v4
         with:
           name: zap-reports
