--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
+        continue-on-error: true
         with:
           target: 'https://lichess.org/'
           fail_action: false
