--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,49 +13,23 @@ permissions:
   pull-requests: write
 
 jobs:
-  zap-scan-job:
+  dependency-check:
+    name: 📦 Dependency Vulnerability Check
     runs-on: ubuntu-latest
-    permissions:
-      actions: write
-      contents: read
-      issues: write
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.10.0
-        continue-on-error: true
+      - uses: actions/checkout@v4
+      - name: Run OWASP Dependency Check
+        uses: dependency-check/Dependency-Check_Action@main
         with:
-          target: 'https://lichess.org/'
-          fail_action: false
-          cmd_options: '-J report_json.json -r report_html.html -w report_md.md'
-
-      - name: List Generated Files
-        if: always()
-        run: ls -lah
-
-      - name: Show Report Contents
-        if: always()
-        run: |
-          echo "=== report_html.html ==="
-          cat report_html.html || echo "report_html.html not found"
-          echo "=== report_json.json ==="
-          cat report_json.json || echo "report_json.json not found"
-          echo "=== report_md.md ==="
-          cat report_md.md || echo "report_md.md not found"
-
-      - name: Upload ZAP Report
-        if: always()
-        continue-on-error: true
+          project: 'CRM-DEV'
+          path: '.'
+          format: 'ALL'
+          args: >
+            --enableRetired
+            --enableExperimental
+      - name: Upload Dependency Check Results
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: zap_report  
-          path: |
-            report_html.html
-            report_json.json
-            report_md.md
-          retention-days: 1
-
- 
+          name: dependency-check-report
+          path: reports/
