--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -75,45 +75,67 @@ jobs:
   owasp-zap-scan:
     name: 🕷️ OWASP ZAP Security Scan
     runs-on: ubuntu-latest
-    needs: pre-scan-validation
-    if: needs.pre-scan-validation.outputs.target-accessible == 'true'
+    permissions:
+     actions: write
+     contents: read
+     issues: write
+
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: 🕷️ OWASP ZAP Baseline Scan
-        if: env.SCAN_INTENSITY == 'light'
-        uses: zaproxy/action-baseline@v0.10.0
-        continue-on-error: true
-        with:
-          target: ${{ env.TARGET_URL }}
-          fail_action: false
-          cmd_options: '-J zap-baseline.json -r zap-baseline.html -w zap-baseline.md'
-      
-      - name: 🕷️ OWASP ZAP Full Scan
-        if: env.SCAN_INTENSITY == 'medium' || env.SCAN_INTENSITY == 'intensive'
-        uses: zaproxy/action-full-scan@v0.8.0
-        continue-on-error: true
-        with:
-          target: ${{ env.TARGET_URL }}
-          fail_action: false
-          cmd_options: '-J zap-full.json -r zap-full.html -w zap-full.md'
-      
-      - name: 🕷️ OWASP ZAP API Scan
-        if: env.SCAN_INTENSITY == 'intensive'
-        run: |
-          docker run -v $(pwd):/zap/wrk/:rw \
-            -t owasp/zap2docker-stable zap-api-scan.py \
-            -t ${{ env.TARGET_URL }}/api/swagger.json \
-            -f openapi \
-            -J zap-api.json \
-            -r zap-api.html || true
-      
-      - name: Upload ZAP Reports
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: zap-reports
-          path: |
-            zap-*.json
-            zap-*.html
-            zap-*.md
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Run OWASP ZAP Baseline Scan
+      if: env.SCAN_INTENSITY == 'light'
+      uses: zaproxy/action-baseline@v0.10.0
+      continue-on-error: true
+      with:
+        target: ${{ env.TARGET_URL }}
+        fail_action: false
+        cmd_options: '-J report_json.json -r report_html.html -w report_md.md'
+
+    - name: Run OWASP ZAP Full Scan
+      if: env.SCAN_INTENSITY == 'medium' || env.SCAN_INTENSITY == 'intensive'
+      uses: zaproxy/action-full-scan@v0.8.0
+      continue-on-error: true
+      with:
+        target: ${{ env.TARGET_URL }}
+        fail_action: false
+        cmd_options: '-J report_json.json -r report_html.html -w report_md.md'
+
+    - name: Run OWASP ZAP API Scan
+      if: env.SCAN_INTENSITY == 'intensive'
+      run: |
+        docker run -v $(pwd):/zap/wrk/:rw \
+          -t owasp/zap2docker-stable zap-api-scan.py \
+          -t ${{ env.TARGET_URL }}/api/swagger.json \
+          -f openapi \
+          -J zap-api.json \
+          -r zap-api.html || true
+
+    - name: List Generated Files
+      if: always()
+      run: ls -lah
+
+    - name: Show Report Contents
+      if: always()
+      run: |
+        echo "=== report_html.html ==="
+        cat report_html.html || echo "report_html.html not found"
+        echo "=== report_json.json ==="
+        cat report_json.json || echo "report_json.json not found"
+        echo "=== report_md.md ==="
+        cat report_md.md || echo "report_md.md not found"
+
+    - name: Upload ZAP Reports
+      if: always()
+      continue-on-error: true
+      uses: actions/upload-artifact@v4
+      with:
+        name: zap_reports
+        path: |
+          report_html.html
+          report_json.json
+          report_md.md
+          zap-api.json
+          zap-api.html
+        retention-days: 1
