--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -139,3 +139,50 @@ jobs:
           zap-api.json
           zap-api.html
         retention-days: 1
+  nuclei-scan:
+    name: 🎯 Nuclei Vulnerability Scanner
+    runs-on: ubuntu-latest
+    needs: pre-scan-validation
+    if: needs.pre-scan-validation.outputs.target-accessible == 'true'
+    steps:
+      - name: 🔧 Install Nuclei
+        run: |
+          curl -L https://github.com/projectdiscovery/nuclei/releases/latest/download/nuclei_3.2.0_linux_amd64.zip -o nuclei.zip
+          unzip nuclei.zip
+          chmod +x nuclei
+          sudo mv nuclei /usr/local/bin/
+      
+      - name: 🔄 Update Nuclei Templates
+        run: nuclei -update-templates
+      
+      - name: 🎯 Basic Nuclei Scan
+        if: env.SCAN_INTENSITY == 'light'
+        run: |
+          nuclei -u ${{ env.TARGET_URL }} \
+            -severity critical,high \
+            -json -o nuclei-basic.json
+      
+      - name: 🎯 Comprehensive Nuclei Scan
+        if: env.SCAN_INTENSITY == 'medium'
+        run: |
+          nuclei -u ${{ env.TARGET_URL }} \
+            -severity critical,high,medium \
+            -tags cve,owasp,misc,config \
+            -json -o nuclei-comprehensive.json
+      
+      - name: 🎯 Intensive Nuclei Scan
+        if: env.SCAN_INTENSITY == 'intensive'
+        run: |
+          nuclei -u ${{ env.TARGET_URL }} \
+            -severity critical,high,medium,low \
+            -tags cve,owasp,misc,config,network,dns \
+            -rate-limit 10 \
+            -bulk-size 25 \
+            -json -o nuclei-intensive.json
+      
+      - name: Upload Nuclei Reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: nuclei-reports
+          path: nuclei-*.json
