--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -145,8 +145,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-     TARGET_URL: http://www.vulnweb.com/
-     SCAN_INTENSITY: medium  # light, medium, intensive
+      TARGET_URL: http://www.vulnweb.com/
+      SCAN_INTENSITY: medium  # light, medium, intensive
 
     steps:
     - name: Checkout code
@@ -189,17 +189,25 @@ jobs:
 
     - name: List Generated Files
       if: always()
-      run: ls -lah
+      run: ls -lah nuclei-*.json || echo "No nuclei report files found"
 
     - name: Show Report Contents
       if: always()
       run: |
-        echo "=== nuclei-basic.json ==="
-        cat nuclei-basic.json || echo "nuclei-basic.json not found"
-        echo "=== nuclei-comprehensive.json ==="
-        cat nuclei-comprehensive.json || echo "nuclei-comprehensive.json not found"
-        echo "=== nuclei-intensive.json ==="
-        cat nuclei-intensive.json || echo "nuclei-intensive.json not found"
+        for file in nuclei-*.json; do
+          echo "=== $file ==="
+          cat "$file" || echo "$file not found or empty"
+        done
+
+    - name: Remove empty reports
+      if: always()
+      run: |
+        for file in nuclei-*.json; do
+          if [ ! -s "$file" ]; then
+            echo "$file is empty, deleting"
+            rm -f "$file"
+          fi
+        done
 
     - name: Upload Nuclei Reports
       if: always()
@@ -207,8 +215,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: nuclei-reports
-        path: |
-          nuclei-basic.json
-          nuclei-comprehensive.json
-          nuclei-intensive.json
+        path: nuclei-*.json
         retention-days: 1
